[project]
name = "job-processing"
version = "1.0.0"
description = "A high-performance asynchronous Job Processing API with API Key management, Rate Limiting, and Background Tasks."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Praroop Anand", email = "praroop.anand@example.com" }
]
keywords = ["fastapi", "asyncio", "job-processing", "rate-limiting", "sqlalchemy", "uv"]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    "bcrypt==3.2.2",
]

[tool.uv]
managed = true
package = false
